Commented out the function that uses thickness as a value. Does not come out correctly. Updated buttons and event listeners.

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ body {
 /* Output Styling */
 #output {
    margin-top: 25px;
+   padding: 15px 25px;
    width: 100%;
    background-color: #f6f6f6;
 }
