--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,10 @@
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+   appearance: none;
+   -webkit-appearance: none; 
+   -moz-appearance: none;
+   margin: 0; 
 }
 
 body {
@@ -28,12 +30,6 @@ body {
    width: 300px;
 }
 
-.calc-toggle-wrapper {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   width: 100%;
-}
 .input-group {
    display: flex;
    justify-content: space-between;
@@ -44,6 +40,14 @@ body {
    margin-right: 10px;
    font-weight: 500;
    font-size: 15px;
+}
+#roll-width {
+   width: 50px;
+   height: 40px;
+   border-radius: 5px;
+   font-size: 15px;
+   font-weight: 500;
+   color: grey;
 }
 .input-group input[type="number"] {
    width: 50px;
@@ -61,7 +65,7 @@ body {
 /* Form Buttom Styling */
 .buttons-container {
    display: flex;
-   justify-content: space-around;
+   justify-content: space-between;
    align-items: center;
    width: 100%;
 }
@@ -69,13 +73,13 @@ body {
    display: flex;
    justify-content: center;
    align-items: center;
-   width: 45%;
-   height: 35px;
+   width: 55%;
+   height: 45px;
    color: white;
    font-weight: 600;
-   padding: 10px 0;
-   background-color: rgb(236, 171, 20);
-   border-radius: 5px;
+   padding: 10px 15px;
+   background-color: #ecab14;
+   border-radius: 4px;
    border: none;
    cursor: pointer;
 }
@@ -83,13 +87,13 @@ body {
    display: flex;
    justify-content: center;
    align-items: center;
-   width: 45%;
-   height: 35px;
+   width: 40%;
+   height: 45px;
    color: white;
    font-weight: 600;
    padding: 10px 0;
-   background-color: rgb(72, 72, 72);
-   border-radius: 5px;
+   background-color: #484848;
+   border-radius: 4px;
    border: none;
    cursor: pointer;
 }
