--- a/styles.css
+++ b/styles.css
@@ -27,27 +27,46 @@ body {
    padding: 18px;
    border-radius: 8px;
    background-color: #f6f6f6;
-   width: 300px;
+   width: 400px;
 }
-
+.tab-wrapper {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   width: 100%;
+}
+.calc-selection-btn {
+   width: 48%;
+   height: 45px;
+   color: white;
+   font-weight: 600;
+   padding: 10px 15px;
+   background-color: rgba(249, 99, 2, 1);
+   border-radius: 4px;
+   border: none;
+   cursor: pointer;
+}
+hr {
+   margin: 20px 0;
+}
 .input-group {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   margin-bottom: 10px;
+   margin-bottom: 15px;
 }
 .input-group label {
-   margin-right: 10px;
    font-weight: 500;
    font-size: 15px;
 }
 #roll-width {
    width: 50px;
-   height: 40px;
+   height: 50px;
    border-radius: 5px;
+   text-align: center;
    font-size: 15px;
    font-weight: 500;
-   color: grey;
+   color: #333;
 }
 .input-group input[type="number"] {
    width: 50px;
@@ -56,7 +75,7 @@ body {
    text-align: center;
    font-size: 15px;
    font-weight: 500;
-   color: grey;
+   color: #333;
 }
 .input-group:nth-last-child(1) {
    margin-bottom: 30px;
@@ -78,7 +97,7 @@ body {
    color: white;
    font-weight: 600;
    padding: 10px 15px;
-   background-color: #ecab14;
+   background-color: rgba(249, 99, 2, 1);
    border-radius: 4px;
    border: none;
    cursor: pointer;
@@ -91,7 +110,7 @@ body {
    height: 45px;
    color: white;
    font-weight: 600;
-   padding: 10px 0;
+   padding: 10px 15px;
    background-color: #484848;
    border-radius: 4px;
    border: none;
