Worked on styling for form1. Added few elements to form2.

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body {
    display: flex;
    justify-content:center;
    align-items: center;
-   height: 100vh;
+   height: 100%;
+   margin: 25px 0;
    background-color: grey;
    font-family: 'Roboto', sans-serif;
 }
@@ -81,8 +82,8 @@ hr {
    font-weight: 500;
    color: #333;
 }
-.input-group:nth-last-child(1) {
-   margin-bottom: 30px;
+.input-group:nth-child(5) {
+   margin-bottom: 40px;
 }
 .input-wrapper {
    display: flex;
@@ -127,6 +128,9 @@ hr {
    cursor: pointer;
    transition: 0.3s;
 }
+#submit-btn:hover {
+   background-color: rgb(250, 145, 48);
+}
 #reset-btn {
    display: flex;
    justify-content: center;
@@ -141,6 +145,9 @@ hr {
    border: none;
    cursor: pointer;
    transition: 0.3s;
+}
+#reset-btn:hover {
+   background-color: rgb(112, 112, 112);
 }
 
 /* ### FORM 2 STYLING ### */
@@ -169,6 +176,28 @@ hr {
    align-items: center;
    width: 50%;
 }
+.measurement-unit {
+   margin-right: 5px;
+}
+.delete-input {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 25px;
+   height: 25px;
+   background-color: rgb(160, 144, 144);
+   color: white;
+   font-weight: 500;
+   border-radius: 50%;
+   padding: 4px;
+   border: none;
+   cursor: pointer;
+   transition: all 0.2s ease-out;
+}
+.delete-input:hover {
+   background-color: rgb(252, 30, 30);
+}
+
 .currency-symbol {
    margin-right: 5px;
    font-weight: 600;
@@ -192,12 +221,12 @@ hr {
    color: #333;
 }
 #sell-price-input {
-   width: 100px;
-   margin: 0 5px;
+   width: 100%;
+   margin-right: 5px;
 }
 .price-unit-measurement {
    font-size: 15px;
-   font-weight: 600;
+   font-weight: 500;
 }
 
 /* Output Styling */
