Eventlistener attached to submit button with switch statement to determin which function to run for the form the submit button is attached to. Started function for form 2 calc formula.

--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ hr {
    width: 50%;
 }
 .measurement-unit {
-   margin-right: 5px;
+   margin-left: -5px;
 }
 .delete-input {
    display: flex;
