--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
    display: flex;
    justify-content:center;
    align-items: center;
-   height: 100%;
+   height: 100vh;
    margin: 25px 0;
    background-color: #393939;
    background-image: url("images/meatal-background-black.jpg");
@@ -99,7 +99,7 @@ hr {
    width: 25%;
    height: 50px;
    padding: 0 30px 0 10px;
-   border-radius: 3px;
+   border-radius: 4px;
    /* text-align: center; */
    font-size: 17px;
    font-weight: 600;
@@ -133,7 +133,7 @@ hr {
    width: auto;
    height: 50px;
    padding: 0 10px;
-   border-radius: 3px;
+   border-radius: 4px;
    text-align: center;
    font-size: 15px;
    font-weight: 600;
@@ -213,7 +213,7 @@ hr {
 #output-roll-size,
 #output-cut-price {
    border: 2px solid grey;
-   border-radius: 3px;
+   border-radius: 4px;
    margin-top: 20px;
    padding: 18px;
    background-color: #f9f9f9;
@@ -274,7 +274,7 @@ hr {
 #roll-width2 { 
    width: 60%;
    height: 50px;
-   border-radius: 3px;
+   border-radius: 4px;
    text-align: center;
    font-size: 15px;
    font-weight: 600;
@@ -302,7 +302,7 @@ hr {
    width: 70px;
    height: 50px;
    padding: 0 17px 0 10px;
-   border-radius: 3px;
+   border-radius: 4px;
    /* text-align: center; */
    font-size: 17px;
    font-weight: 600;
@@ -341,8 +341,8 @@ hr {
    color: white;
    font-size: 10px;
    font-weight: 500;
-   border-radius: 2px;
-   /* padding: 0 5px; */
+   border-radius: 4px;
+   padding: 0 5px;
    border: none;
    cursor: pointer;
    transition: all 0.2s ease-out;
