--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
 }
 
 .form-container {
+   position: relative;
    padding: 18px;
    border-radius: 4px;
    background-color: #f6f6f6;
@@ -379,4 +380,21 @@ hr {
    padding: 15px 25px;
    width: 100%;
    background-color: #f6f6f6;
+}
+footer {
+   position: relative;
+   left: -18px;
+   bottom: -19px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: calc(100% + 36px);
+   padding: 15px;
+   border-bottom-left-radius: 4px;
+   border-bottom-right-radius: 4px;
+   background-color: #333;
+}
+footer > p {
+   color: #f6f6f6;
+   font-size: 11px;
 }
