--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,10 @@ input:focus::placeholder {
 }
 input:focus, select:focus {
    /* background-color: #FFFF66; */
-   border: 2px solid #fb853b;
+   border-bottom: 2px solid #fb853b;
+   border-top: 2px solid #fb853b;
+   border-left: 2px solid #fb853b;
+   border-right: 2px solid #fb853b;
    outline: none;
   /* box-shadow: 0 0 0 3px hsla(220, 100%, 50%, 80%); */
   box-shadow: 0 0 4px 1px rgba(251, 133, 59, 0.8);
