--- a/styles.css
+++ b/styles.css
@@ -255,8 +255,9 @@ hr {
    border-bottom: 3px solid rgba(247, 100, 2);
 }
 .total-qty-results {
-   font-size: 1.3em;
+   font-size: 1.5em;
    font-weight: 600;
+   margin-bottom: 5px;
 }
 .total-measure-unit-tag,
 .before-tax-tag {
@@ -357,7 +358,7 @@ hr {
    background-color: rgb(160, 144, 144);
    color: white;
    font-size: 10px;
-   font-weight: 500;
+   font-weight: 600;
    border-radius: 4px;
    padding: 0 5px;
    border: none;
