--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@
    margin: 0;
    box-sizing: border-box;
 }
-input[type=number]::-webkit-inner-spin-button, 
+/* input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
    appearance: none;
    -webkit-appearance: none; 
    -moz-appearance: none;
    margin: 0; 
-}
-input::placeholder {
+} */
+/* input::placeholder {
    color: rgba(158, 158, 158, 0.5);
    font-weight: 600;
 }
@@ -24,22 +24,16 @@ input:focus::placeholder {
    color: transparent;
 }
 input:focus, select:focus {
-   /* background-color: #FFFF66; */
-   border-bottom: 2px solid #fb853b;
-   border-top: 2px solid #fb853b;
-   border-left: 2px solid #fb853b;
-   border-right: 2px solid #fb853b;
+   border: 2px solid #4aa5eb;
    outline: none;
-  /* box-shadow: 0 0 0 3px hsla(220, 100%, 50%, 80%); */
-  box-shadow: 0 0 4px 1px rgba(251, 133, 59, 0.8);
-   
-}
+   box-shadow: 0 0 4px 1px rgba(74, 165, 235, 0.8);
+} */
 
 body {
    display: flex;
    justify-content:center;
    align-items: center;
-   height: 100vh;
+   height: 100%;
    margin: 25px 0;
    background-color: #393939;
    background-image: url("images/meatal-background-black.jpg");
@@ -126,7 +120,7 @@ hr {
     opacity: 0.5;
     font-weight: 600;
 }
-.input-group:nth-child(5) {
+.input-group:nth-last-child(3) {
    margin-bottom: 40px;
 }
 .input-wrapper {
@@ -139,9 +133,7 @@ hr {
    font-weight: 500;
    font-size: 15px;
 }
-/* #cut-size-ft, #cut-size-in {
-   width: 60px;
-} */
+
 
 /* Roll width selection styling */
 #roll-width {
@@ -195,6 +187,7 @@ hr {
    width: 55%;
    height: 45px;
    color: rgba(249, 99, 2, 1);
+   font-size: 15px;
    font-weight: 600;
    padding: 10px 15px;
    background-color: #fff;
@@ -213,17 +206,19 @@ hr {
    align-items: center;
    width: 40%;
    height: 45px;
-   color: white;
+   color: rgb(89, 89, 89);
+   font-size: 15px;
    font-weight: 600;
    padding: 10px 15px;
-   background-color: #484848;
+   background-color: #fff;
    border-radius: 2px;
-   border: none;
+   border: 2px solid rgba(72, 72, 72, 1);
    cursor: pointer;
    transition: 0.3s;
 }
 #reset-btn:hover {
-   background-color: rgb(112, 112, 112);
+   color: #f6f6f6;
+   background-color: rgba(72, 72, 72, 1);
 }
 #output-roll-size,
 #output-cut-price {
@@ -326,8 +321,8 @@ hr {
    font-weight: 600;
    color: #333;
 }
-.input-group2:nth-last-child(1) {
-   margin-bottom: 30px;
+.input-group2:nth-last-child(3) {
+   margin-bottom: 40px;
 }
 
 .input-wrapper {
