--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@
    margin: 0;
    box-sizing: border-box;
 }
-/* input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
    appearance: none;
    -webkit-appearance: none; 
    -moz-appearance: none;
    margin: 0; 
-} */
-/* input::placeholder {
+} 
+ input::placeholder {
    color: rgba(158, 158, 158, 0.5);
    font-weight: 600;
 }
@@ -27,7 +27,7 @@ input:focus, select:focus {
    border: 2px solid #4aa5eb;
    outline: none;
    box-shadow: 0 0 4px 1px rgba(74, 165, 235, 0.8);
-} */
+}
 
 body {
    display: flex;
