--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,6 +53,29 @@ body {
    background-color: #f6f6f6;
    width: 400px;
 }
+header {
+   position: relative;
+   top: -19px;
+   left: -18px;
+   border-top-left-radius: 4px;
+   border-top-right-radius: 4px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   width: calc(100% + 36px);
+   padding: 10px 18px;
+   color: #fff;
+   background-color: #333;
+}
+.icons {
+   color: #f9f9f9;
+   transition: all 0.3s ease-in-out;
+   cursor: pointer;
+}
+.icons:hover {
+   color: rgba(249, 99, 2, 1);
+   
+}
 .tab-wrapper {
    display: flex;
    justify-content: space-between;
