--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,7 +38,7 @@ body {
    min-height: 100%;
    margin: 25px 0;
    background-color: #393939;
-   background-image: url("images/meatal-background-black.jpg");
+   background-image: url("../../images/meatal-background-black.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
