Updated js cutDiv template with trash icon. Edit out put 2 text.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -364,7 +364,7 @@ hr {
    color: rgb(252, 30, 30);
 }
 
-.hidden-remove-btn {
+.hidden-delete-btn {
    visibility: hidden;
 }
 .input-price-wrapper {
