--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,15 +33,17 @@ input:focus, select:focus {
 body {
    display: flex;
    justify-content:center;
-   align-items: center;
+   /* align-items: center; */
    height: 100vh;
-   min-height: 100%;
+   /* height: 100%; */
+   min-height: 100vh;
    margin: 25px 0;
    background-color: #393939;
-   background-image: url("../../images/metal-background-black.jpg");
+   background: url("../../images/metal-background-black.jpg");
+   /* background: url("../../images/metal-background-black.jpg"), url("../../images/HD-logo.png"); */
    background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
+   background-repeat: no-repeat, repeat;
+   background-size: cover, 100px 100px;
    background-blend-mode: overlay;
    font-family: 'Roboto', sans-serif;
 }
@@ -52,6 +54,7 @@ body {
    border-radius: 4px;
    background-color: #f6f6f6;
    width: 400px;
+   height: fit-content;
 }
 .tab-wrapper {
    display: flex;
