--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,7 @@ body {
    display: flex;
    justify-content:center;
    /* align-items: center; */
-   height: 100vh;
+   /* height: 100vh; */
    /* height: 100%; */
    min-height: 100vh;
    margin: 25px 0;
