--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,9 +106,58 @@ hr {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   margin-bottom: 15px;
+   margin-bottom: 20px;
+}
+.input-group > .error-text-wrapper, .error-icon-wrapper {
+   position: absolute;
+   width: max-content;
+   height: auto;
+   /* background-color: red; */
+}
+.error-text-wrapper {
+   font-size: 0.7em;
+   font-weight: 600;
+   color: red;
+   top: 106%;
+   left: 57%;
+   /* display: none; */
+}
+.error-icon-wrapper {
+   top: 32%;
+   left: 88%;
+   font-size: 1em;
+   color: red;
+   transform: scale(1);
+   transition: all 0.3s ease-in-out
 }
 
+.error-input-border {
+   border: 2px solid red;
+   border-radius: 4px;
+   outline: none;
+   box-shadow: 0 0 4px 1px rgba(255, 0, 0, 0.8);
+}
+.error-shake {
+   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+   transform: translate3d(0, 0, 0);
+}
+@keyframes shake {
+   10%, 90% {
+     transform: translate3d(-1px, 0, 0);
+   }
+   
+   20%, 80% {
+     transform: translate3d(2px, 0, 0);
+   }
+ 
+   30%, 50%, 70% {
+     transform: translate3d(-4px, 0, 0);
+   }
+ 
+   40%, 60% {
+     transform: translate3d(4px, 0, 0);
+   }
+ }
 .input-group input[type="number"] {
    width: 25%;
    height: 50px;
@@ -118,6 +167,10 @@ hr {
    font-size: 17px;
    font-weight: 600;
    color: #333;
+}
+.fist-error-icon {  /*form1*/
+   top: 32%;
+   left: 91.5%;
 }
 .input-group > .input-unit-inch {
    position: absolute;
