--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -613,3 +613,30 @@ footer > p {
    color: #f6f6f6;
    font-size: 11px;
 }
+
+/* MOBILE STYLING - START */
+/* ==========================================*/
+@media only screen and (min-width: 700px)  {
+   .form-container {
+      width: 700px;
+   }
+   .cut-list-item {
+      width: 100%;
+   }
+   #cuts-list>li:before {
+      padding-right: 0px;
+      margin-right: 144px;
+   }
+   .error2-ft-icon-wrapper {
+      left: 55%;
+   }
+   .error2-inch-icon-wrapper {
+      left: 83%;
+   }
+   #input-price-wrapper {
+      margin-right: 16px;
+   }
+   #sell-price-input {
+      width: 159.35px;
+   }
+}
