--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,9 +66,36 @@ header {
    width: 700px;
    height: 50px;
    background-color: #333;
+   font-size: 1.2rem;
+   color: #f6f6f6;
    border-radius: 4px 4px 0 0;
    opacity: 1;
+   margin-bottom: 5px;
 }
+.header__wrapper {
+   width: 100%;
+   height: 100%;
+   padding: 15px 18px 15px 18px;
+   /* background-color: yellow; */
+}
+.header__menu-list {
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+   gap: 25px;
+   list-style: none;   
+}
+.header__menu-list-item {
+   width: auto;
+   cursor: pointer;
+}
+.header__menu-list-item > svg {
+   transition: color 0.3s ease-in-out;
+}
+.header__menu-list-item > svg:hover {
+   color: rgb(250, 145, 48);
+}
+
 .tab-wrapper {
    display: flex;
    justify-content: space-between;
