--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,11 +35,13 @@ body {
    display: flex;
    justify-content:center;
    /* align-items: center; */
+   flex-wrap: wrap;
    /* height: 100vh; */
-   /* height: 100%; */
+   height: 100%;
    min-height: 100vh;
    /* margin: 25px 0; */
    padding-top: 25px;
+   padding-bottom: 25px;
    background-color: #393939;
    background-image: url("../../images/metal-background-black.jpg");
    /* background-image: url("../../images/metal-background-black.jpg"), url("../../images/HD-logo.png"); */
@@ -95,6 +97,7 @@ header {
 .header__menu-list-item > svg:hover {
    color: rgb(250, 145, 48);
 }
+
 
 .tab-wrapper {
    display: flex;
@@ -669,7 +672,50 @@ footer > p {
    color: #f6f6f6;
    font-size: 11px;
 }
+#menu-display {
+   display: block;
+   position: absolute;
+   top: 100%;
+   width: 500px;
+   height: 80vh;
+   border-radius: 5px;
+   padding: 20px;
+   border: 2px solid #4a4a4a;
+   background-color: #fff;
+   /* box-shadow: 0px 8px 15px 6px rgba(0,0,0,0.5);
+   -webkit-box-shadow: 0px 8px 15px 6px rgba(0,0,0,0.5);
+   -moz-box-shadow: 0px 8px 15px 6px rgba(0,0,0,0.5); */
+   box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
+   -webkit-box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
+   -moz-box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
+   transform: scale(0);
+   overflow: scroll;
+   transition: all 0.5s ease-in-out;
+}
 
+/* .hide-menu {
+   top: 100%;
+   transform: scale(0);
+} */
+#menu-display > ol {
+   padding-left: 25px;
+}
+.btn-wrapper {
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+}
+#closeMenuBtn {
+   border: none;
+   font-size: 25px;
+   color: grey;
+   background: transparent;
+   cursor: pointer;
+   transition: color 0.5s ease-in-out;
+}
+#closeMenuBtn:hover {
+   color: rgb(203, 39, 39)
+}
 /* MOBILE STYLING - START */
 /* ==========================================*/
 @media only screen and (min-width: 700px)  {
